feat: duplicate the pages from v1

--- a/src/components/divider/section-divider.astro
+++ b/src/components/divider/section-divider.astro
@@ -1,6 +1,6 @@
 <hr class="section-divider" />
 
-<style is:global>
+<style>
   :root {
     --light-section-divider: hsl(220, 8%, 75%);
     --dark-section-divider: hsl(220, 8%, 30%);
