--- a/src/components/header/index.astro
+++ b/src/components/header/index.astro
@@ -1,20 +1,16 @@
 ---
-import { Image } from "astro:assets"
-import pfpImg from "../../assets/carousel/pfp.webp"
-import { getTranslations } from "../../i18n/utils"
 import SectionDivider from "../divider/section-divider.astro"
-import LangToggle from "./lang-toggle.astro"
 import Dropdown from "./desktop/dropdown.astro"
+import LangToggle from "./lang-toggle.astro"
 import MobileMenu from "./mobile/index.astro"
 
 const { lang } = Astro.props
-
-const { header } = getTranslations(lang)
 ---
 
 <header>
 	<nav>
-		<MobileMenu />
+		<div></div>
+		<MobileMenu lang={lang} />
     <Dropdown lang={lang} />
 		<LangToggle lang={lang} />
 	</nav>
@@ -29,10 +25,30 @@ const { header } = getTranslations(lang)
 		-webkit-backdrop-filter: blur(15px);
 		backdrop-filter: blur(15px);
     text-align: center;
+		z-index: 99;
+		container-type: inline-size;
 	}
 
 	nav {
-		display: grid;
-		grid-template-columns: 1fr 10fr 1fr;
+		display: flex;
+		justify-content: space-between;
+		height: 3rem;
+		width: min(64rem, 100%);
+		margin-inline: auto;
+	}
+
+	div {
+		aspect-ratio: 1 / 1;
+    width: 1.5rem;
+		margin-right: 2rem;
+	}
+
+	@container (max-width: 530px) {
+		nav {
+			height: 4rem;
+		}
+		div {
+			display: none;
+		}
 	}
 </style>
