--- a/src/components/header/lang-toggle.astro
+++ b/src/components/header/lang-toggle.astro
@@ -19,10 +19,13 @@ const { lang } = Astro.props
 <style>
   a {
     display: flex;
-    align-items: center;
     padding: 0.5rem;
     transition: background-color 0.3s;
     border-radius: 100%;
+    aspect-ratio: 1 / 1;
+    width: 1.5rem;
+    place-self: center;
+    margin-right: 2rem;
   }
 
   a:hover {
@@ -31,5 +34,11 @@ const { lang } = Astro.props
 
   a:focus {
     outline: rgba(191, 219, 254, 0.5) solid 3px;
+  }
+
+  @container (max-width: 530px) {
+    a {
+      margin-right: 0.5rem;
+    }
   }
 </style>
