--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,10 +1,9 @@
 ---
 import { SEOMetadata } from "astro-seo-metadata"
-import { getLangFromUrl, getTranslations } from "../i18n/utils"
+import Footer from "../components/footer/index.astro"
 import Header from "../components/header/index.astro"
-import SectionDivider from "../components/divider/section-divider.astro"
-import type { Locales, ui } from "../i18n/ui"
-// import Footer from "../components/footer/index.astro"
+import type { Locales } from "../i18n/ui"
+import { getTranslations } from "../i18n/utils"
 
 interface Props {
   title: string
@@ -40,14 +39,10 @@ const url = Astro.site
 		<title>{title}</title>
 	</head>
 	<body>
-    <Header lang={lang} />
+		<Header lang={lang} />
 		<main><slot /></main>
+		<Footer lang={lang} />
 		<style is:global>
-			html {
-				scroll-behavior: smooth;
-        font-size: 100%;
-			}
-
 			@media (prefers-reduced-motion: reduce) {
 				html {
 					scroll-behavior: auto;
@@ -58,12 +53,93 @@ const url = Astro.site
 				}
 			}
 
+			body:has(input#close-drawer[type="radio"]:checked) {
+				overflow: hidden;
+			}
+
+			p,
+			li,
+			strong {
+				font-size: 1.125rem;
+			}
+
+			p,
+			ul {
+				margin: 0.5rem 0;
+			}
+
+			h1,
+			h2,
+			h3,
+			h4 {
+				margin: 0.5rem 0;
+			}
+
+			h2 {
+				font-size: 2.25rem;
+			}
+
+			h3 {
+				font-size: 1.75rem;
+			}
+
+			h4 {
+				font-size: 1.5rem;
+			}
+
+			.disc-list {
+				list-style-type: disc;
+				padding-left: 20px;
+				gap: 0.5rem;
+				display: flex;
+				flex-direction: column;
+			}
+		</style>
+		<style is:inline>
+			:root {
+				--background: hsl(210, 33%, 98%);
+				--text-color: hsl(0, 0%, 8%);
+				--gray-color: hsl(0, 0%, 20%);
+				--background-white: hsl(210, 33%, 98%);
+				--link-color: hsl(212, 100%, 40%);
+				--gray-color: hsl(0, 0%, 20%);
+				--black-color: hsl(210, 33%, 98%);
+				--line-color: hsl(0, 3%, 87%);
+			}
+
+			@media (prefers-color-scheme: dark) {
+				:root {
+					--background: hsl(0, 0%, 8%);
+					--text-color: hsl(0, 0%, 98%);
+					--gray-color: hsl(0, 0%, 60%);
+					--background-white: hsl(0, 0%, 8%);
+					--link-color: hsl(212, 100%, 60%);
+					--gray-color: hsl(0, 0%, 60%);
+					--black-color: hsl(200, 13%, 5%);
+					--line-color: hsl(0, 0%, 25%);
+				}
+			}
+
+			html {
+				scroll-behavior: smooth;
+				font-size: 100%;
+				color-scheme: light dark;
+			}
+
 			body {
 				color: var(--text-color);
 				background-color: var(--background);
-				font-family: "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans";
+				font-family:
+					system-ui,
+					-apple-system,
+					BlinkMacSystemFont,
+					"Segoe UI",
+					Roboto,
+					sans-serif;
 				margin: 0;
 				min-height: 100svh;
+				width: 100vw;
+				overflow-x: hidden;
 				display: flex;
 				flex-direction: column;
 				justify-content: space-between;
@@ -75,31 +151,13 @@ const url = Astro.site
 			main {
 				max-width: min(64rem, 100%);
 				margin-inline: auto;
-				padding: var(--spaces-4) var(--spaces-4);
+				padding: 1rem 1rem;
 				z-index: 0;
-				gap: var(--spaces-4);
+				gap: 1rem;
 				display: flex;
 				flex-direction: column;
 				overflow-y: clip;
 			}
 		</style>
-	</body><style>
-		:root {
-			--light-background: hsl(210, 33%, 98%);
-			--light-text-color: hsl(0, 0%, 8%);
-
-			--dark-background: hsl(0, 0%, 8%);
-			--dark-text-color: hsl(0, 0%, 98%);
-
-			--background: var(--light-background);
-      --text-color: var(--light-text-color);
-		}
-
-		@media (prefers-color-scheme: dark) {
-			:root {
-				--background: var(--dark-background);
-        --text-color: var(--dark-text-color);
-			}
-		}
-	</style>
+	</body>
 </html>
