--- a/src/page-wrapped/index.astro
+++ b/src/page-wrapped/index.astro
@@ -1,5 +1,10 @@
 ---
-import { languages, type Locales } from "../i18n/ui"
+import BriefIntro from "../components/brief-intro/index.astro"
+import Carousel from "../components/carousel/index.astro"
+import ContentDivider from "../components/divider/content-divider.astro"
+import Programming from "../components/programming/index.astro"
+import TopMe from "../components/top-me/index.astro"
+import { type Locales, languages } from "../i18n/ui"
 import { getTranslations } from "../i18n/utils"
 import Layout from "../layouts/Layout.astro"
 
@@ -17,4 +22,11 @@ export const getStaticPaths = () => {
 }
 ---
 
-<Layout title={metadata.title} description={metadata.description} lang={lang} />
+<Layout title={metadata.title} description={metadata.description} lang={lang}>
+  <TopMe lang={lang} />
+  <Carousel />
+  <ContentDivider />
+  <BriefIntro lang={lang} />
+  <ContentDivider />
+  <Programming lang={lang} />
+</Layout>
