--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -95,7 +95,7 @@ const url = Astro.site
 				flex-direction: column;
 			}
 		</style>
-		<style is:inline>
+		<style is:global>
 			:root {
 				--background: hsl(210, 33%, 98%);
 				--text-color: hsl(0, 0%, 8%);
@@ -118,35 +118,32 @@ const url = Astro.site
 					--black-color: hsl(200, 13%, 5%);
 					--line-color: hsl(0, 0%, 25%);
 				}
+
+				html {
+					color-scheme: dark;
+				}
 			}
 
 			html {
 				scroll-behavior: smooth;
 				font-size: 100%;
-				color-scheme: light dark;
+				color-scheme: light;
 			}
 
-			body {
-				color: var(--text-color);
-				background-color: var(--background);
-				font-family:
-					system-ui,
-					-apple-system,
-					BlinkMacSystemFont,
-					"Segoe UI",
-					Roboto,
-					sans-serif;
-				margin: 0;
-				min-height: 100svh;
-				width: 100vw;
-				overflow-x: hidden;
-				display: flex;
-				flex-direction: column;
-				justify-content: space-between;
-				text-wrap: balance;
-				word-wrap: break-word;
-				vertical-align: middle;
-			}
+      body {
+        color: var(--text-color);
+        background-color: var(--background-white);
+        font-family: "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans";
+        margin: 0;
+        min-height: 100svh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        text-wrap: balance;
+        word-wrap: break-word;
+        vertical-align: middle;
+        container-type: inline-size;
+      }
 
 			main {
 				max-width: min(64rem, 100%);
