--- a/src/page-wrapped/index.astro
+++ b/src/page-wrapped/index.astro
@@ -4,6 +4,7 @@ import Carousel from "../components/carousel/index.astro"
 import ContentDivider from "../components/divider/content-divider.astro"
 import Programming from "../components/programming/index.astro"
 import TopMe from "../components/top-me/index.astro"
+import Timeline from "../components/timeline/index.astro"
 import { type Locales, languages } from "../i18n/ui"
 import { getTranslations } from "../i18n/utils"
 import Layout from "../layouts/Layout.astro"
@@ -27,6 +28,8 @@ export const getStaticPaths = () => {
   <Carousel />
   <ContentDivider />
   <BriefIntro lang={lang} />
+  <ContentDivider />
+  <Timeline lang={lang} />
   <ContentDivider />
   <Programming lang={lang} />
 </Layout>
