refactor: formatted with biome

--- a/src/components/carousel/carousel-item.astro
+++ b/src/components/carousel/carousel-item.astro
@@ -1,8 +1,7 @@
 ---
-import { Image } from "astro:assets";
-import { generateSizesAndWidths } from "../../utils/image";
-const { id, item, imgSrc, alt, carousel, prevId, nextId, checked } =
-	Astro.props;
+import { Image } from "astro:assets"
+import { generateSizesAndWidths } from "../../utils/image"
+const { id, item, imgSrc, alt, carousel, prevId, nextId, checked } = Astro.props
 ---
 
 <input
