--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,19 +1,19 @@
 ---
-import { SEOMetadata } from "astro-seo-metadata"
-import Footer from "../components/footer/index.astro"
-import Header from "../components/header/index.astro"
-import type { Locales } from "../i18n/ui"
-import { getTranslations } from "../i18n/utils"
+import { SEOMetadata } from "astro-seo-metadata";
+import Footer from "../components/footer/index.astro";
+import Header from "../components/header/index.astro";
+import type { Locales } from "../i18n/ui";
+import { getTranslations } from "../i18n/utils";
 
 interface Props {
-  title: string
-  description: string
-  lang: Locales
+	title: string;
+	description: string;
+	lang: Locales;
 }
 
-const { title, description, lang } = Astro.props
-const { metadata } = getTranslations(lang)
-const url = Astro.site
+const { title, description, lang } = Astro.props;
+const { metadata } = getTranslations(lang);
+const url = Astro.site;
 ---
 
 <!doctype html>
@@ -130,20 +130,26 @@ const url = Astro.site
 				color-scheme: light;
 			}
 
-      body {
-        color: var(--text-color);
-        background-color: var(--background-white);
-        font-family: "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans";
-        margin: 0;
-        min-height: 100svh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        text-wrap: balance;
-        word-wrap: break-word;
-        vertical-align: middle;
-        container-type: inline-size;
-      }
+			body {
+				color: var(--text-color);
+				background-color: var(--background-white);
+				font-family:
+					system-ui,
+					-apple-system,
+					BlinkMacSystemFont,
+					"Segoe UI",
+					Roboto,
+					sans-serif;
+				margin: 0;
+				min-height: 100svh;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				text-wrap: balance;
+				word-wrap: break-word;
+				vertical-align: middle;
+				container-type: inline-size;
+			}
 
 			main {
 				max-width: min(64rem, 100%);
