feat(scroll): better scroll to top button

--- a/src/components/brief-intro/index.astro
+++ b/src/components/brief-intro/index.astro
@@ -116,6 +116,7 @@ const { briefIntro } = getTranslations(lang)
     display: inline;
     text-decoration: underline;
     outline: none;
+    text-wrap: pretty;
   }
 
   summary::-webkit-details-marker {
