refactor(projects): add new project

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -141,7 +141,7 @@ const url = Astro.site
 				display: flex;
 				flex-direction: column;
 				justify-content: space-between;
-				text-wrap: balance;
+				text-wrap: pretty;
 				word-wrap: break-word;
 				vertical-align: middle;
 				container-type: inline-size;
