--- a/src/components/footer/index.astro
+++ b/src/components/footer/index.astro
@@ -14,7 +14,8 @@ const { footer } = getTranslations(lang)
   <a
     href={`/${lang === "ja" ? "en" : "ja"}`}
     class="footer-link"
-    title={lang === "ja" ? "To English" : "日本語へ"}>
+    title={lang === "ja" ? "To English" : "日本語へ"}
+  >
     {
       lang === "ja" ? (
         <NewZealandIcon size="1.4rem" />
