--- a/src/components/footer/socials.astro
+++ b/src/components/footer/socials.astro
@@ -8,14 +8,16 @@ import XIcon from "../../icons/x.astro"
     href="https://x.com/taroj1205"
     target="_blank"
     class="social-icon x-icon"
-    title="X (Twitter)">
+    title="X (Twitter)"
+  >
     <XIcon size="100%" />
   </a>
   <a
     href="https://github.com/taroj1205"
     target="_blank"
     class="social-icon github-icon"
-    title="GitHub">
+    title="GitHub"
+  >
     <GitHubIcon size="100%" />
   </a>
 </div>
