--- a/src/components/programming/index.astro
+++ b/src/components/programming/index.astro
@@ -18,7 +18,8 @@ const dict = getTranslations(lang)
           <a
             href="https://yamada-ui.com/community/team"
             target="_blank"
-            rel="noopener noreferrer">
+            rel="noopener noreferrer"
+          >
             https://yamada-ui.com/community/team
           </a>
         </li>
