--- a/src/components/top-me/socials.astro
+++ b/src/components/top-me/socials.astro
@@ -12,42 +12,48 @@ import XIcon from "../../icons/x.astro"
     href="https://x.com/taroj1205"
     target="_blank"
     class="social-icon x-icon"
-    title="X (Twitter)">
+    title="X (Twitter)"
+  >
     <XIcon />
   </a>
   <a
     href="https://instagram.com/taroj1205"
     target="_blank"
     class="social-icon instagram-icon"
-    title="Instagram">
+    title="Instagram"
+  >
     <InstagramIcon />
   </a>
   <a
     href="https://facebook.com/taroj1205"
     target="_blank"
     class="social-icon facebook-icon"
-    title="Facebook">
+    title="Facebook"
+  >
     <FacebookIcon />
   </a>
   <a
     href="https://linkedin.com/in/taroj1205"
     target="_blank"
     class="social-icon linkedin-icon"
-    title="LinkedIn">
+    title="LinkedIn"
+  >
     <LinkedInIcon />
   </a>
   <a
     href="https://github.com/taroj1205"
     target="_blank"
     class="social-icon github-icon"
-    title="GitHub">
+    title="GitHub"
+  >
     <GitHubIcon />
   </a>
   <a
     href="mailto:taroj1205@gmail.com"
     target="_blank"
     class="social-icon mail-icon"
-    title="Mail">
+    title="Mail"
+  >
     <MailIcon />
   </a>
 </div>
