--- a/src/icons/analytics.astro
+++ b/src/icons/analytics.astro
@@ -7,6 +7,7 @@ const { size = "1em", ...rest } = Astro.props
   width={size}
   height={size}
   {...rest}
-  viewBox="0 0 24 24">
+  viewBox="0 0 24 24"
+>
   <path fill="currentColor" d="M3 22V8h4v14zm7 0V2h4v20zm7 0v-8h4v8z"></path>
 </svg>
