--- a/src/icons/connect-4.astro
+++ b/src/icons/connect-4.astro
@@ -7,7 +7,8 @@ const { size = "1em", ...rest } = Astro.props
   width={size}
   height={size}
   {...rest}
-  viewBox="0 0 24 24">
+  viewBox="0 0 24 24"
+>
   <path
     fill="currentColor"
     d="M12.54 7.165c.5-.162.901-.543 1.091-1.03l4.233 4.234a1.76 1.76 0 0 0-1.03 1.092zm4.295 5.375l-4.296 4.295c.5.162.902.543 1.092 1.03l4.233-4.234a1.755 1.755 0 0 1-1.03-1.092m-5.374 4.296l-4.295-4.296c-.162.5-.542.902-1.03 1.092l4.234 4.233c.19-.487.591-.867 1.092-1.03m-.001-9.669l-4.295 4.296a1.755 1.755 0 0 0-1.03-1.092l4.234-4.233c.19.487.591.867 1.092 1.03"
