--- a/src/icons/left-arrow.astro
+++ b/src/icons/left-arrow.astro
@@ -3,7 +3,8 @@
   height="100%"
   viewBox="0 0 24 24"
   fill="none"
-  xmlns="http://www.w3.org/2000/svg">
+  xmlns="http://www.w3.org/2000/svg"
+>
   <path
     d="M15 18l-6-6 6-6"
     stroke="currentColor"
