--- a/src/icons/new-zealand.astro
+++ b/src/icons/new-zealand.astro
@@ -10,7 +10,8 @@ const { size = "1em" } = Astro.props
   text-rendering="geometricPrecision"
   fill-rule="evenodd"
   clip-rule="evenodd"
-  viewBox="0 0 512 511.999">
+  viewBox="0 0 512 511.999"
+>
   <g fill-rule="nonzero">
     <path
       fill="#4D4D4D"
