--- a/src/icons/instagram.astro
+++ b/src/icons/instagram.astro
@@ -7,7 +7,8 @@ const { size = "1em", ...rest } = Astro.props
   width={size}
   height={size}
   {...rest}
-  viewBox="0 0 24 24">
+  viewBox="0 0 24 24"
+>
   <g fill="none">
     <path
       stroke="currentColor"
