--- a/src/icons/japan.astro
+++ b/src/icons/japan.astro
@@ -10,7 +10,8 @@ const { size = "1em" } = Astro.props
   text-tendering="geometricPrecision"
   fill-rule="evenodd"
   clip-rule="evenodd"
-  viewBox="0 0 512 512">
+  viewBox="0 0 512 512"
+>
   <g fill-rule="nonzero">
     <path
       fill="#999"
