--- a/src/icons/mail.astro
+++ b/src/icons/mail.astro
@@ -2,7 +2,8 @@
   xmlns="http://www.w3.org/2000/svg"
   width="1em"
   height="1em"
-  viewBox="0 0 24 24">
+  viewBox="0 0 24 24"
+>
   <path
     fill="currentColor"
     d="M10.81 2.34a2.25 2.25 0 0 1 2.38 0l7.75 4.833q.116.072.221.157L12 12.15L2.834 7.333q.107-.085.225-.16zM2.048 8.614A2.3 2.3 0 0 0 2 9.082v7.668A3.25 3.25 0 0 0 5.25 20h13.5A3.25 3.25 0 0 0 22 16.75V9.082q0-.241-.05-.472l-9.6 5.05a.75.75 0 0 1-.699.001z"
