--- a/src/icons/university.astro
+++ b/src/icons/university.astro
@@ -7,13 +7,15 @@ const { size = "1em", ...rest } = Astro.props
   width={size}
   height={size}
   {...rest}
-  viewBox="0 0 24 24">
+  viewBox="0 0 24 24"
+>
   <g
     fill="none"
     stroke="currentColor"
     stroke-linecap="round"
     stroke-linejoin="round"
-    stroke-width="2">
+    stroke-width="2"
+  >
     <circle cx="12" cy="10" r="1"></circle>
     <path
       d="M22 20V8h-4l-6-4l-6 4H2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2M6 17v.01M6 13v.01M18 17v.01M18 13v.01"
