--- a/src/components/programming/projects/card.css
+++ b/src/components/programming/projects/card.css
@@ -1,105 +1,105 @@
+
 .projects-view-container:has(input[value="nextjs"]:checked)
-  + .projects-container
-  .project-card.nextjs {
++ .projects-container
+.project-card.nextjs {
   animation: card-in 0.5s ease-in-out forwards;
   pointer-events: auto;
 }
 
 .projects-view-container:has(input[value="javascript"]:checked)
-  + .projects-container
-  .project-card.javascript {
++ .projects-container
+.project-card.javascript {
   animation: card-in 0.5s ease-in-out forwards;
   pointer-events: auto;
 }
 
 .projects-view-container:has(input[value="typescript"]:checked)
-  + .projects-container
-  .project-card.typescript {
++ .projects-container
+.project-card.typescript {
   animation: card-in 0.5s ease-in-out forwards;
   pointer-events: auto;
 }
 
 .projects-view-container:has(input[value="chrome"]:checked)
-  + .projects-container
-  .project-card.chrome {
++ .projects-container
+.project-card.chrome {
   animation: card-in 0.5s ease-in-out forwards;
   pointer-events: auto;
 }
 
 .projects-view-container:has(input[value="unity"]:checked)
-  + .projects-container
-  .project-card.unity {
++ .projects-container
+.project-card.unity {
   animation: card-in 0.5s ease-in-out forwards;
   pointer-events: auto;
 }
 
 .projects-view-container:has(input[value="cs"]:checked)
-  + .projects-container
-  .project-card.cs {
++ .projects-container
+.project-card.cs {
   animation: card-in 0.5s ease-in-out forwards;
   pointer-events: auto;
 }
 
 .projects-view-container:has(input[value="flask"]:checked)
-  + .projects-container
-  .project-card.flask {
++ .projects-container
+.project-card.flask {
   animation: card-in 0.5s ease-in-out forwards;
   pointer-events: auto;
 }
 
 .projects-view-container:has(input[value="sqlite3"]:checked)
-  + .projects-container
-  .project-card.sqlite3 {
++ .projects-container
+.project-card.sqlite3 {
   animation: card-in 0.5s ease-in-out forwards;
   pointer-events: auto;
 }
 @media (prefers-reduced-motion: reduce) {
   .projects-view-container:has(input[value="nextjs"]:checked)
-    + .projects-container
-    .project-card.nextjs {
-    animation: none;
-    display: flex;
-  }
-  .projects-view-container:has(input[value="javascript"]:checked)
-    + .projects-container
-    .project-card.javascript {
-    animation: none;
-    display: flex;
-  }
-  .projects-view-container:has(input[value="typescript"]:checked)
-    + .projects-container
-    .project-card.typescript {
-    animation: none;
-    display: flex;
-  }
-  .projects-view-container:has(input[value="chrome"]:checked)
-    + .projects-container
-    .project-card.chrome {
-    animation: none;
-    display: flex;
-  }
-  .projects-view-container:has(input[value="unity"]:checked)
-    + .projects-container
-    .project-card.unity {
-    animation: none;
-    display: flex;
-  }
-  .projects-view-container:has(input[value="cs"]:checked)
-    + .projects-container
-    .project-card.cs {
-    animation: none;
-    display: flex;
-  }
-  .projects-view-container:has(input[value="flask"]:checked)
-    + .projects-container
-    .project-card.flask {
-    animation: none;
-    display: flex;
-  }
-  .projects-view-container:has(input[value="sqlite3"]:checked)
-    + .projects-container
-    .project-card.sqlite3 {
-    animation: none;
-    display: flex;
-  }
++ .projects-container
+.project-card.nextjs {
+  animation: none;
+  display: flex;
 }
+  .projects-view-container:has(input[value="javascript"]:checked)
++ .projects-container
+.project-card.javascript {
+  animation: none;
+  display: flex;
+}
+  .projects-view-container:has(input[value="typescript"]:checked)
++ .projects-container
+.project-card.typescript {
+  animation: none;
+  display: flex;
+}
+  .projects-view-container:has(input[value="chrome"]:checked)
++ .projects-container
+.project-card.chrome {
+  animation: none;
+  display: flex;
+}
+  .projects-view-container:has(input[value="unity"]:checked)
++ .projects-container
+.project-card.unity {
+  animation: none;
+  display: flex;
+}
+  .projects-view-container:has(input[value="cs"]:checked)
++ .projects-container
+.project-card.cs {
+  animation: none;
+  display: flex;
+}
+  .projects-view-container:has(input[value="flask"]:checked)
++ .projects-container
+.project-card.flask {
+  animation: none;
+  display: flex;
+}
+  .projects-view-container:has(input[value="sqlite3"]:checked)
++ .projects-container
+.project-card.sqlite3 {
+  animation: none;
+  display: flex;
+}}
