--- a/src/components/programming/projects/index.astro
+++ b/src/components/programming/projects/index.astro
@@ -15,7 +15,7 @@ const techs = [
 ]
 ---
 
-<h3>{heading.projects}</h3>
+<h3>{heading.programming.projects}</h3>
 <div class="projects-view-container">
   <form id="projects-view">
     <fieldset>
