--- a/src/components/programming/languages.astro
+++ b/src/components/programming/languages.astro
@@ -1,23 +1,27 @@
 ---
 import { getTranslations } from "../../i18n/utils"
 
-const { locale } = Astro.props
-const { languages } = getTranslations(locale)
+const { lang } = Astro.props
+const {
+  heading: {
+    programming: { languages, framework, library, thirdParty },
+  },
+} = getTranslations(lang)
 ---
 
 <div class="vstack">
-  <h3>{languages.heading}</h3>
+  <h3>{languages}</h3>
   <p>JavaScript, TypeScript, HTML, CSS, Markdown, Python</p>
 
-  <h3>{languages.framework}</h3>
+  <h3>{framework}</h3>
   <p>Next.js, Express, React.js, Node.js, Flask, Tailwind CSS</p>
 
-  <h3>UI {languages.library}</h3>
+  <h3>UI {library}</h3>
   <p>Next UI, Chakra UI, Material UI, Joy UI, Yamada UI</p>
 
   <h3>SQL</h3>
   <p>MySQL, SQLite, PostgreSQL</p>
 
-  <h3>{languages["third party"]}</h3>
+  <h3>{thirdParty}</h3>
   <p>Supabase, Vercel, Netlify, GitHub, Auth0, Clerk</p>
 </div>
