refactor(image): improve image sizes

--- a/src/components/top-me/socials.astro
+++ b/src/components/top-me/socials.astro
@@ -84,3 +84,10 @@ import XIcon from "../../icons/x.astro"
     background-color: hsl(0, 0%, 20%);
   }
 </style>
+
+<style is:global>
+  .top-me-social svg {
+    width: 2rem;
+    height: 2rem;
+  }
+</style>
