--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const url = Astro.site
       astroSitemap={true}
       canonicalUrl={String(url)}
       type="website"
-      astroGenerator={true}
+      astroGenerator={false}
     />
     <title>{title}</title>
   </head>
@@ -43,14 +43,34 @@ const url = Astro.site
     <main><slot /></main>
     <Footer lang={lang} />
     <style is:global>
-      @media (prefers-reduced-motion: reduce) {
-        html {
-          scroll-behavior: auto;
-        }
-        * {
-          transition: none !important;
-          animation: none !important;
-        }
+      body {
+        font-family:
+          system-ui,
+          -apple-system,
+          BlinkMacSystemFont,
+          "Segoe UI",
+          Roboto,
+          sans-serif;
+        margin: 0;
+        min-height: 100svh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        text-wrap: pretty;
+        word-wrap: break-word;
+        vertical-align: middle;
+        container-type: inline-size;
+      }
+
+      main {
+        max-width: 64rem;
+        margin-inline: auto;
+        padding: 1rem 1rem;
+        z-index: 0;
+        gap: 1rem;
+        display: flex;
+        flex-direction: column;
+        overflow-y: clip;
       }
 
       p,
@@ -129,33 +149,16 @@ const url = Astro.site
       body {
         color: var(--text-color);
         background-color: var(--background-white);
-        font-family:
-          system-ui,
-          -apple-system,
-          BlinkMacSystemFont,
-          "Segoe UI",
-          Roboto,
-          sans-serif;
-        margin: 0;
-        min-height: 100svh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        text-wrap: pretty;
-        word-wrap: break-word;
-        vertical-align: middle;
-        container-type: inline-size;
       }
 
-      main {
-        max-width: min(64rem, 100%);
-        margin-inline: auto;
-        padding: 1rem 1rem;
-        z-index: 0;
-        gap: 1rem;
-        display: flex;
-        flex-direction: column;
-        overflow-y: clip;
+      @media (prefers-reduced-motion: reduce) {
+        html {
+          scroll-behavior: auto;
+        }
+        * {
+          transition: none !important;
+          animation: none !important;
+        }
       }
     </style>
   </body>
